tests/fixtures/positive/style/MultilineLambdaItParameter.kt
package style

fun example(items: List<String>) {
    items.forEach {
        println(it)
        println(it.length)
        println(it.uppercase())
    }
}
