tests/fixtures/negative/style/DoubleNegativeExpression.kt
package style

fun example(list: List<String>) {
    if (list.isEmpty()) {
        println("empty")
    }
}
